# rustdevari

./: .dockerignore  .gitignore  Cargo.toml  DevDockerfile  Dockerfile  Makefile  README.md  dev.Dockerfile  docker-compose.ci.yml  docker-compose.yml  hello_world.py  random_test.py  test.py  util.py
.github/workflows/: snapshot-test.yml
src/: api.rs  main.rs  rsm.rs  snapshot.rs  store.rs  types.rs
tests/: snapshot_test.py
tests_deprected/: snapshot_test.py
