[package]
name = "etcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos" }

axum = "0.6" # our web framework
tokio = { version = "1", features = ["full"] } # async runtime, needed for axum
hyper = { version = "0.14", features = ["full"] } # http

# don't need these yet, but might in the future, they are optional dependencies for axum
# tower = "0.4"
# tower-http = "0.3"

serde = { version = "1", features = ["derive"] } # serialization ...
serde_json = "1" # ... to json

lazy_static = "1.4" # useful for config via environment etc.
