[package]
name = "rustdevari-etcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/JonathanArns/omnipaxos" }
omnipaxos_storage = { git = "https://github.com/JonathanArns/omnipaxos", features = ["sled"] }

# use these dependencies instead of the above to demonstrate the bug in snapshot log synchronization
# omnipaxos_core = { git = "https://github.com/JonathanArns/omnipaxos", branch = "unfixed" }
# omnipaxos_storage = { git = "https://github.com/JonathanArns/omnipaxos", features = ["sled"], branch = "unfixed" }

axum = "0.6" # our web framework
tokio = { version = "1", features = ["full"] } # async runtime, needed for axum
hyper = { version = "0.14", features = ["full"] } # low-level http stack
reqwest = { version = "0.11", features = ["json"] } # high-level http client

serde = { version = "1", features = ["derive"] } # serialization ...
serde_json = "1" # ... to json

lazy_static = "1.4" # useful for config via environment

[features]
default = []
crash_recovery = []
pl = []
